# datatagger-mcp

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  server.py
.github/workflows/: docker-image.yml
src/datatagger_mcp/: __init__.py  __main__.py  api.py
